# stm32f4

./: .clang-format  .gitmodules  meson.build  meson.options  stm32f401xc.ld  toolchain.ini
thermo/: README.md  meson.build  pcd.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  thermo.c  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h
